# agentic_ai_based_knowledge_aggregator

./: .gitignore  README.md  pyproject.toml
src/agentic_ai_based_knowledge_aggregator/: crew.py  main.py  report.md
src/agentic_ai_based_knowledge_aggregator/config/: agents.yaml  tasks.yaml
src/agentic_ai_based_knowledge_aggregator/tools/: custom_tool.py  document_knowledge_tool.py
